# decision-proof-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
core/: __init__.py  domain_metadata.py  domain_runtime.py  domain_shared.py  global_verifier.py  guidance.py  next_questions.py  schema_validation.py
decision_proof/: __init__.py  cli.py  demo.py  diff.py  domain_tools.py  next_questions.py  report.py  runtime.py  validation.py
decision_proof/core/: __init__.py  domain_metadata.py  domain_runtime.py  domain_shared.py  (+7 more)
domains/: __init__.py
examples/: car-decision-lean-yes.json  car-decision-value-time-100.json  car-decision.json  car-options-comparison.json  graduate-school-decision.json  graduate-school-notes.md  rent-vs-buy-decision.json
references/: car-decision-model.md  decision-ir-schema.md  decision-workspace.md  domain-pack-contract.md  lean-backend.md  output-format.md  product-architecture.md  proof-state.md
schemas/: __init__.py  decision_ir.schema.json  domain_manifest.schema.json  proof_goal.schema.json  run_artifact.schema.json
scripts/: __init__.py  diff_runs.py  evaluate_car_decision.py  evaluate_car_options.py  evaluate_decision.py  generate_lean_car_proof.py  generate_report.py  next_questions.py  sensitivity.py  validate_ir.py
tests/: test_car_decision.py  test_car_options.py  test_demo.py  test_domain_manifests.py  test_domain_tools.py  test_global_verifier.py  test_graduate_school.py  test_model_engine.py  test_next_questions.py  test_rent_vs_buy.py  test_report_and_diff.py  test_schema_contracts.py  test_sensitivity.py
(+34 files in other folders)
