[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-proof"
version = "0.1.0"
description = "Decision compiler and proof runtime for structured, auditable decisions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
decision-proof = "decision_proof.cli:main"

[tool.setuptools.packages.find]
include = ["decision_proof*", "schemas*"]

[tool.setuptools.package-data]
schemas = ["*.json"]
"decision_proof.domains.car" = ["manifest.json", "questions.md"]
"decision_proof.domains.graduate_school" = ["manifest.json", "questions.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["decision_proof", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
